--- a/PultDecontaminator/PultDecontaminator.csproj
+++ b/PultDecontaminator/PultDecontaminator.csproj
@@ -47,6 +47,12 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>packages\EntityFramework.6.0.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="NModbus4, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\NModbus4.3.0.0-alpha1\lib\net45\NModbus4.dll</HintPath>
+    </Reference>
+    <Reference Include="NModbus4.Serial, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>packages\NModbus4.Serial.1.0.0-alpha1\lib\net45\NModbus4.Serial.dll</HintPath>
+    </Reference>
     <Reference Include="Prism, Version=7.1.0.123, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>packages\Prism.Core.7.1.0.123-pre\lib\net45\Prism.dll</HintPath>
     </Reference>
@@ -129,6 +135,7 @@
     <Compile Include="Models\Account.cs" />
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Services\IAuthService.cs" />
+    <Compile Include="Services\IModbusService.cs" />
     <Compile Include="ViewModels\AutorizationViewModel.cs" />
     <Compile Include="ViewModels\MainWindowViewModel.cs" />
     <Compile Include="Views\Autorization.xaml.cs">
