--- a/PultDecontaminator/packages.config
+++ b/PultDecontaminator/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="CommonServiceLocator" version="2.0.3" targetFramework="net452" />
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
+  <package id="NModbus4" version="3.0.0-alpha1" targetFramework="net452" />
+  <package id="NModbus4.Serial" version="1.0.0-alpha1" targetFramework="net452" />
   <package id="Prism.Core" version="7.1.0.123-pre" targetFramework="net452" />
   <package id="Prism.Unity" version="7.1.0.123-pre" targetFramework="net452" />
   <package id="Prism.Wpf" version="7.1.0.123-pre" targetFramework="net452" />
