Prepare for Modbus

--- a/PultDecontaminator/App.config
+++ b/PultDecontaminator/App.config
@@ -29,4 +29,13 @@
       <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
+  <appSettings>
+    <add key="SerialPort" value="COM1" />
+    <add key="BaudRate" value="9600" />
+    <add key="DataBits" value="8" />
+    <add key="Parity" value="Parity.None" />
+    <add key="StopBits" value="StopBits.One" />
+    <add key="SlaveIds" value="1,2,3,7,8,9" />
+  </appSettings>
+
 </configuration>
