List of registers decontominator

--- a/PultDecontaminator/App.config
+++ b/PultDecontaminator/App.config
@@ -36,6 +36,7 @@
     <add key="Parity" value="Parity.None" />
     <add key="StopBits" value="StopBits.One" />
     <add key="SlaveIds" value="1,2,3,7,8,9" />
+    <add key="Psw" value="827ccb0eea8a706c4c34a16891f84e7b" />
   </appSettings>
 
 </configuration>
