--- a/PultDecontaminator/PultDecontaminator.csproj
+++ b/PultDecontaminator/PultDecontaminator.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Models\Account.cs" />
     <Compile Include="Models\DataModbus.cs" />
+    <Compile Include="Models\DecontaminatorRegisters.cs" />
     <Compile Include="Services\AuthService.cs" />
     <Compile Include="Services\IAuthService.cs" />
     <Compile Include="Services\IModbusService.cs" />
