Added timer and Com port and settings in app.config. ListeView registers in MainWindow

--- a/PultDecontaminator/App.config
+++ b/PultDecontaminator/App.config
@@ -33,10 +33,20 @@
     <add key="SerialPort" value="COM1" />
     <add key="BaudRate" value="9600" />
     <add key="DataBits" value="8" />
+
+    <!-- следующие два параметра пока в программе заданы однозначно -->
     <add key="Parity" value="Parity.None" />
     <add key="StopBits" value="StopBits.One" />
+
+    <!-- номера модбас слейвов деконтаминаторов -->
     <add key="SlaveIds" value="1,2,3,7,8,9" />
+
+    <!-- мд5 хэш пароля -->
     <add key="Psw" value="827ccb0eea8a706c4c34a16891f84e7b" />
+
+    <!-- частота опроса в миллисекундах -->
+    <add key="TimerInterval" value="2000" />
+
   </appSettings>
 
 </configuration>
