--- a/PultDecontaminator/App.config
+++ b/PultDecontaminator/App.config
@@ -30,7 +30,7 @@
     <remove invariant="System.Data.SQLite" /><add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" /></DbProviderFactories>
   </system.data>
   <appSettings>
-    <add key="SerialPort" value="COM1" />
+    <add key="SerialPort" value="COM8" />
     <add key="BaudRate" value="9600" />
     <add key="DataBits" value="8" />
 
@@ -39,13 +39,16 @@
     <add key="StopBits" value="StopBits.One" />
 
     <!-- номера модбас слейвов деконтаминаторов -->
-    <add key="SlaveIds" value="1,2,3,7,8,9" />
+    <add key="SlaveIds" value="1,128,3,7,8,9" />
 
     <!-- мд5 хэш пароля -->
     <add key="Psw" value="827ccb0eea8a706c4c34a16891f84e7b" />
 
     <!-- частота опроса в миллисекундах -->
-    <add key="TimerInterval" value="2000" />
+    <add key="TimerInterval" value="1500" />
+
+    <!-- размер текста для аварий в символах после которого весь список аварий и тревог записывается в логфайл с текущим веременем и обнуляется -->
+    <add key="LogSize" value="200000" />
 
   </appSettings>
 
